fixed inventory card spacing

--- a/client/src/components/pages/Inventory.css
+++ b/client/src/components/pages/Inventory.css
@@ -18,11 +18,11 @@
     display:flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-content: flex-start;
     flex-wrap: wrap;
-    /* width: 340px; */
+    /* width: 90%; */
     height: 100%;
-    flex: 5;
+    flex: 5 4;
     overflow-y: auto;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 10px;
@@ -30,8 +30,7 @@
     border-style: solid;
     border-width: 3px;
     border-color: white;
-    gap: 15px;
-    
+    gap: 15px;    
     
 }
 
@@ -42,6 +41,7 @@
     display:flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-content: flex-start;
     flex-wrap: wrap;
     width: 90%;
     height: 45%;
@@ -53,6 +53,7 @@
     border-style: solid;
     border-width: 3px;
     border-color: white;
+    
 }
 
 .fishGroup {
@@ -86,12 +87,13 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    flex: 4;
+    flex: 4 5;
     z-index: 1;
     border-style: solid;
     border-width: 3px;
     border-color: white;
     overflow-y: auto;
+    flex-grow: 1.5;
 }
 
 .Inventory-sell-button {
